Added hacky deb packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,20 +2,51 @@ cmake_minimum_required(VERSION 3.13)
 
 project(osmv VERSION 0.0.1)
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+if(UNIX AND NOT APPLE)
+    if(CMAKE_SYSTEM_NAME MATCHES ".*Linux")
+        set(LINUX TRUE)
+    endif()
 
-# vendored dependencies
-#
-# - this project deliberately uses C libraries that only transitively depend on
-#   OS-level libs.
-#
-# - those deps are copied in-tree to reduce the amount of fucking around
-#   required to build osmv
+    # if it's a unix variant that is non-Linux, it isn't (currently)
+    # supported. It *might* compile + work, though
+endif()
+
+# glew: build from source and statically link: works on all platforms
+#       without introducing potentially breaking dependencies into the
+#       runtime
 add_subdirectory(third_party/glew-2.1.0/build/cmake/ EXCLUDE_FROM_ALL)
-add_subdirectory(third_party/glm-0.9.9.8 EXCLUDE_FROM_ALL)
-add_subdirectory(third_party/SDL2-2.0.12 EXCLUDE_FROM_ALL)
+
+if (LINUX)
+    # on Linux specifically, use a system-provided SDL2
+    #
+    # SDL2 handles *a lot* of distro-specific bs (e.g. X vs Wayland), so
+    # it's advantageous to just link to whatever build of SDL2 that distro
+    # provides.
+    #
+    # I'd prefer to just statically build + link SDL2, because that would
+    # result in a uniform build across all platforms, but SDL2 itself links
+    # to potentially volatile OS libraries and statically linking it would
+    # cause osmv to be dependent on libraries that change between distros.
+
+    set(SDL2_LIB SDL2)
+    set(SDL2_INCLUDE /usr/include/SDL2)
+else()
+    # on non-Linux, just build SDL2 from source and statically link
+    # it
+    #
+    # on Windows, this is more convenient because it's a PITA to tell
+    # every developer how to setup SDL2 on their system. The dependency
+    # brittleness problem (that Linux has) is less of a problem under
+    # Windows, which has a mostly stable OS API for GUIs.
+    #
+    # other Unixes (e.g. Apple) aren't (yet) packaged for. Users will
+    # be able to build on OSX but the packages produced by static
+    # linking might be unstable. Needs investigation.
+
+    add_subdirectory(third_party/SDL2-2.0.12 EXCLUDE_FROM_ALL)
+    set(SDL2_LIB SDL2-static)
+    set(SDL2_INCLUDE third_party/SDL2-2.0.12/include/)
+endif()
 
 # opensim: linked as a separate dependency
 #
@@ -34,9 +65,20 @@ find_package(OpenSim REQUIRED)
 #
 # - generate `osmv_config.hpp` using this particular build's parameters.
 #   Contains per-config info (e.g. version number, build type)
-file(TO_NATIVE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/resources/ RESOURCES_DIR)
-file(TO_NATIVE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/resources/shaders/ SHADERS_DIR)
 configure_file("${PROJECT_SOURCE_DIR}/src/osmv_config.hpp.in" "osmv_config.hpp")
+
+if(LINUX)
+    # linux installs are arranged like this:
+    #
+    # <install_dir>/
+    #     bin/
+    #         osmv
+    #     lib/
+    #         *.so
+    #
+    # so set the installed RPATH to search in "../lib" for bundled libraries
+    set(CMAKE_INSTALL_RPATH "$ORIGIN/../lib")
+endif()
 
 add_executable(osmv
     third_party/imgui-1.78/imgui.cpp
@@ -44,6 +86,10 @@ add_executable(osmv
     third_party/imgui-1.78/imgui_widgets.cpp
     third_party/imgui-1.78/examples/imgui_impl_opengl3.cpp
     third_party/imgui-1.78/examples/imgui_impl_sdl.cpp
+
+    src/os.hpp
+    $<$<BOOL:${WIN32}>:src/os_win32.cpp>
+    $<$<BOOL:${LINUX}>:src/os_linux.cpp>
 
     src/gl.hpp
     src/gl.cpp
@@ -54,8 +100,8 @@ add_executable(osmv
     src/imgui_extensions.hpp
     src/imgui_extensions.cpp
     src/shims.hpp
-    src/os.hpp
-    src/os.cpp
+    src/globals.hpp
+    src/globals.cpp
 
     src/application.hpp
     src/application.cpp
@@ -73,7 +119,7 @@ add_executable(osmv
     src/osmv.cpp
 )
 target_include_directories(osmv PUBLIC
-    third_party/SDL2-2.0.12/include/
+    ${SDL2_INCLUDE}
     third_party/glm-0.9.9.8/
     third_party/glew-2.1.0/include/
     third_party/imgui-1.78/
@@ -87,27 +133,26 @@ set(OSMV_OPENSIM_LIBS
     osimActuators
     osimAnalyses
     osimTools
+    osimLepton
     SimTKcommon
     SimTKmath
     SimTKsimbody
 )
 target_link_libraries(osmv
-    SDL2-static
+    # in gcc, the <filesystem> implementation must be explicitly linked separately
+    $<$<CXX_COMPILER_ID:GNU>:stdc++fs>
+    ${SDL2_LIB}
     glew_s
-
     ${OSMV_OPENSIM_LIBS}
 )
 target_compile_options(osmv PUBLIC
     # disable MSVC's (default) permissive mode
+    #
     # - This forces MSVC to obey ISO C++
     # - I do this mostly because I like the logic keywords (e.g. `x or b`)
     $<$<CXX_COMPILER_ID:MSVC>:/permissive->
 )
 target_compile_features(osmv PUBLIC
-    # use C++17
-    #
-    # OpenSim is a C++11 project, but this project is a CLI/GUI with no
-    # external native API exposed downstream
     cxx_std_17
 )
 target_link_options(osmv PUBLIC
@@ -118,66 +163,58 @@ target_link_options(osmv PUBLIC
 )
 set_target_properties(osmv PROPERTIES
     CXX_EXTENSIONS OFF
+    CXX_STANDARD_REQUIRED YES
 )
 
-# IDE hint: vendored code should be organized into a separate group in the UI
-source_group(TREE third_party/)
+source_group(TREE third_party/)  # IDE hint: group third_party code together
 
-
-# HACK: runtime resources are loaded differently in dev vs. install mode
-#
-# osmv tries to load a runtime configuration by searching from the exe's
-# dir upwards until it finds a file called `osmv.toml`. The contents of that
-# file depends on whether we're developing or installing osmv
-#
-# - dev:     `osmv.toml` contains a hard-coded absolute path to the `resources/`
-#            dir in the source tree, so that developers can edit resources and
-#            reload without having to copy files around or edit their run
-#            args in the IDE etc.
-#
-# - install: `osmv.toml` defines a relative (to the config) path to the
-#            resources/ dir, which is copied into the install directory
-#            (which depends on where the user installs it, etc.)
-#
-# - none:   if there's no osmv.toml config, or 'resources' is not defined in
-#           osmv.toml, then the implementation tries "$EXE/../resources" as a
-#           last-ditch effort
+# development configuration: generate a configuration that loads resources from the
+# developer's source tree
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/DEV_osmv.toml.in" "${CMAKE_BINARY_DIR}/osmv.toml")
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/INSTALL_osmv.toml" RENAME "osmv.toml" DESTINATION ".")
-install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/resources" DESTINATION ".")
 
 if (WIN32)
-    # Windows builds: copy all libraries into the exe dir
+    # Windows development: copy OpenSim libraries (if they change) after each build
     #
-    # this is because Windows specifically searches in the exe's dir for
-    # libraries. Windows doesn't have the concept of RPATHs for debugging
-    #
-    # see: https://stackoverflow.com/questions/44909846/cmake-exe-cant-find-dll
-
+    # this is necessary so that developers can boot osmv.exe from their IDE without
+    # having to manually copy DLLs around
     foreach(OSL ${OSMV_OPENSIM_LIBS})
         add_custom_command(
             TARGET osmv
             POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy_if_different "${OpenSim_ROOT_DIR}/bin/${OSL}.dll" "$<TARGET_FILE_DIR:osmv>")
     endforeach()
+endif()
 
-    # Windows install
+
+
+# ----------------- installation / packaging (CPack) -----------------
+
+include(InstallRequiredSystemLibraries)
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
+set(CPACK_PACKAGE_VERSION_MAJOR "${osmv_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${osmv_VERSION_MINOR}")
+set(CPACK_PACKAGE_CONTACT "Adam Kewley <contact@adamkewley.com>")
+set(CPACK_PACKAGE_DESCRIPTION "A thin GUI for OpenSim - primarily for development use")
+
+# install the runtime configuration used by installed deployments
+install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/INSTALL_osmv.toml" RENAME "osmv.toml" DESTINATION ".")
+
+# install the runtime resources used by osmv.exe
+install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/resources" DESTINATION ".")
+
+if (WIN32)
+    # Windows install: copy osmv.exe + libraries into the bin/ dir
     #
-    # - copy exe + libraries into a single dir
-    # - copy any other assets (shaders, icons, etc.)
+    # this creates a "fat" build in bin/, where the Windows dynamic linker can just
+    # find everything in one place
+    #
+    # see: https://stackoverflow.com/questions/44909846/cmake-exe-cant-find-dll
     install(TARGETS osmv)
     foreach(OSL ${OSMV_OPENSIM_LIBS})
         install(FILES "${OpenSim_ROOT_DIR}/bin/${OSL}.dll" DESTINATION bin)
     endforeach()
 
-endif()
-
-# packaging: use CPack to create standard OS install packages
-include(InstallRequiredSystemLibraries)
-set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
-set(CPACK_PACKAGE_VERSION_MAJOR "${osmv_VERSION_MAJOR}")
-set(CPACK_PACKAGE_VERSION_MINOR "${osmv_VERSION_MINOR}")
-if (WIN32)
+    # windows packaging: use NSIS.exe to create a Windows installer
     set(CPACK_GENERATOR NSIS)
     set(CPACK_NSIS_MUI_ICON "${CMAKE_CURRENT_SOURCE_DIR}/social_youtube_icon_177144.ico")
     set(CPACK_NSIS_UNINSTALL_NAME "uninstall-osmv")
@@ -188,4 +225,39 @@ if (WIN32)
     set(CPACK_NSIS_MUI_FINISHPAGE_RUN osmv)
     set(CPACK_NSIS_CREATE_ICONS "CreateShortCut '\$SMPROGRAMS\\\\osmv ${osmv_VERSION_MAJOR}.${osmv_VERSION_MINOR}.${osmv_VERSION_PATCH}\\\\osmv.lnk' '\$INSTDIR\\\\bin\\\\osmv.exe'")
 endif()
+
+if (LINUX)
+    # Linux install: copy everything into a standard layout dir:
+    #
+    # - bin/: executables
+    # - lib/: libraries
+    # - resources/: arch-independent runtime resources
+
+    # osmv --> bin/osmv
+    install(TARGETS osmv DESTINATION bin/)
+
+    # (e.g.) osimCommon.so --> lib/osimCommon.so
+    foreach(OSL ${OSMV_OPENSIM_LIBS})
+        get_filename_component(OSL_REALPATH "${OpenSim_ROOT_DIR}/lib/lib${OSL}.so" REALPATH)
+        install(PROGRAMS "${OSL_REALPATH}" DESTINATION lib/)
+    endforeach()
+
+    set(CPACK_GENERATOR DEB)
+    set(CPACK_PACKAGING_INSTALL_PREFIX /opt/osmv)
+    # this assumes the user's computer already has OpenGL, GLX, and GLU, which tend to
+    # be packaged with OpenGL drivers (usually... ;))
+    #
+    # software implementations of those APIs can be retrieved with:
+    #     apt-get install libopengl0 libglx0 libglu1-mesa
+    set(CPACK_DEBIAN_PACKAGE_DEPENDS "libsdl2-2.0-0, libblas3, liblapack3, libstdc++6")
+    set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
+
+    # installation scripts that setup/teardown shortcuts, symlinks,
+    # etc.
+    configure_file("${PROJECT_SOURCE_DIR}/postinst.in" "postinst" @ONLY)
+    configure_file("${PROJECT_SOURCE_DIR}/postrm.in" "postrm" @ONLY)
+    set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_BINARY_DIR}/postinst;${CMAKE_BINARY_DIR}/postrm")
+endif()
+
+# CPack vars etc. now fully configured, so include it
 include(CPack)
