--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,8 @@ add_executable(osmv
     src/3d_common.cpp
     src/fd_simulation.hpp
     src/fd_simulation.cpp
+    src/renderer.hpp
+    src/renderer.cpp
 
     src/application.hpp
     src/application.cpp
